# agg

./: configure.in  libagg.pc.in
font_freetype/: Makefile.am
include/: agg_conv_adaptor_vcgen.h  agg_conv_adaptor_vpgen.h  agg_conv_clip_polygon.h  agg_conv_clip_polyline.h  agg_conv_smooth_poly1.h  agg_gamma_functions.h  agg_path_storage.h  agg_pixfmt_rgba.h  agg_rasterizer_cells_aa.h  agg_rasterizer_outline_aa.h  agg_renderer_base.h  agg_renderer_outline_aa.h  agg_renderer_outline_image.h  agg_renderer_scanline.h  agg_trans_affine.h
src/: agg_trans_affine.cpp
src/platform/X11/: Makefile.am
src/platform/sdl/: Makefile.am
